feat: change eslint config

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,5 +11,10 @@
 		"sourceType": "module"
 	},
 	"plugins": ["@typescript-eslint"],
-	"rules": {}
+	"ignorePatterns": ["node_modules/", "cdk.out/"],
+	"rules": {
+		"@typescript-eslint/no-unused-vars": "warn",
+		"@typescript-eslint/no-var-requires": "off",
+		"@typescript-eslint/no-explicit-any": "warn"
+	}
 }
