--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
 	"devDependencies": {
 		"@types/jest": "^29.5.12",
 		"@types/node": "20.11.16",
+		"@typescript-eslint/eslint-plugin": "^7.0.2",
+		"@typescript-eslint/parser": "^7.0.2",
+		"aws-cdk": "2.128.0",
+		"eslint": "^8.56.0",
 		"jest": "^29.7.0",
 		"ts-jest": "^29.1.2",
-		"aws-cdk": "2.128.0",
 		"ts-node": "^10.9.2",
 		"typescript": "~5.3.3"
 	},
